; [metadata]
; name = "kubetpl"
; version = 0.0.1
; author="Grauer W01f"
; author_email="grauerwf@gmail.com",
; description="A template tool for kubernetes resources"
;     long_description=long_description
;     long_description_content_type="text/markdown"
;     url="https://github.com/grauerwf/kubtemplate"
; project_urls =
;     Bug Tracker = https://github.com/pypa/sampleproject/issues
; classifiers =
;     Programming Language :: Python :: 3
;     License :: OSI Approved :: MIT License
;     Operating System :: OS Independent
;
; [options]
; package_dir =
;     = src
; packages = find:
; python_requires = >=3.6
;
; [options.packages.find]
; where = src